fix(domain): List of를 Arrays.asList로 변경